<resources>
    <string name="app_name">YuYin</string>
    <string name="title_activity_capture">CaptureActivity</string>



    <!-- Strings used for permission -->
    <string name="ration_text_head">：请点击确认授予权限，点击取消将退出应用</string>
    <string name="permission_notification">通知权限</string>
    <string name="d_permission_notification">本应用需要通知权限展示应用状态</string>

    <string name="permission_foreground_service">前台服务权限</string>
    <string name="d_permission_foreground_service">本应用需要前台服务权限运行维持应用后台活动</string>

    <string name="permission_audio_record">麦克风权限</string>
    <string name="d_permission_audio_record">本应用需要麦克风权限录制音频从而转写</string>

    <string name="permission_SYSTEM_ALERT_WINDOW">浮窗权限</string>
    <string name="d_permission_SYSTEM_ALERT_WINDOW">本应用需要悬浮窗权限展示悬浮字幕</string>

    <!-- Strings used for fragments for navigation -->
    <string name="capture_label">capture</string>
    <string name="record_label">record</string>
    <string name="file_manage_label">files</string>
    <string name="main_label">main</string>
    <string name="setting_label">setting_option</string>
    <string name="edit_label">edit</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_manager">file_manager</string>
    <string name="app_setting">app_setting</string>
    <string name="main">main</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="welcome_sentence">welcome use!</string>
    <string name="author">zzh</string>
    <string name="email">zzh-www@qq.com</string>
    <string name="save">save</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="play">play</string>
    <string name="delete_dialog_title">删除文件</string>
    <string name="save_settings">保存设定</string>
    <string name="reset_settings">重置设定</string>
    <string name="not_found_settings">未找到正确的配置文件</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>


    <!-- Strings for share -->
    <string name="share_title">分享</string>
    <string name="share_message">请选择分享方式：\n 以zip包形式分享（压缩需要时间）\n 多文件形式分享（部分应用不兼容）</string>
    <string name="share_zip">zip</string>
    <string name="share_multi">multi</string>
    <string name="share_log">分享应用日志文件</string>
</resources>