<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/yuyin_navigation"
    app:startDestination="@id/main_dest">
    <fragment
        android:id="@+id/runningCapture_dest"
        android:name="com.yuyin.demo.view.RunningCapture"
        android:label="@string/capture_label"
        tools:layout="@layout/fragment_running_asr" />
    <fragment
        android:id="@+id/runningRecord_dest"
        android:name="com.yuyin.demo.view.RunningRecord"
        android:label="@string/record_label"
        tools:layout="@layout/fragment_running_asr" />
    <fragment
        android:id="@+id/setting_option_dest"
        android:name="com.yuyin.demo.view.SettingsFragment"
        android:label="@string/setting_label"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/main_dest"
        android:name="com.yuyin.demo.view.Main"
        android:label="home"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_main_dest_to_runingCapture_dest"
            app:destination="@id/runningCapture_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_main_dest_to_runingRecord_dest"
            app:destination="@id/runningRecord_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_setting_option_dest"
            app:destination="@id/setting_option_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/edit_dest"
        android:name="com.yuyin.demo.view.edit.EditFragment"
        android:label="@string/edit_label"
        tools:layout="@layout/fragment_edit" >
    </fragment>
    <fragment
        android:id="@+id/filesManager_dest"
        android:name="com.yuyin.demo.view.file.FilesManager"
        android:label="@string/file_manage_label"
        tools:layout="@layout/fragment_files_manager">
        <action
            android:id="@+id/action_filesManager_dest_to_edit_dest"
            app:destination="@id/edit_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

</navigation>